force-app/main/default/objects/B_Staff__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Email__c</fullName>
        <label>Employee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                    <default>true</default>
                    <label>Female</label>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shift__c</fullName>
        <label>Shift</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Night</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_del__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Telangana</fullName>
                </value>
                <value>
                    <fullName>Kerala</fullName>
                </value>
                <value>
                    <fullName>Karnataka</fullName>
                </value>
                <value>
                    <fullName>Tamil Nadu</fullName>
                </value>
                <value>
                    <fullName>US1</fullName>
                </value>
                <value>
                    <fullName>US2</fullName>
                </value>
                <value>
                    <fullName>US3</fullName>
                </value>
                <value>
                    <fullName>US4</fullName>
                </value>
                <value>
                    <fullName>AS1</fullName>
                </value>
                <value>
                    <fullName>AS2</fullName>
                </value>
                <value>
                    <fullName>AS3</fullName>
                </value>
                <value>
                    <fullName>AS4</fullName>
                </value>
                <value>
                    <fullName>UK1</fullName>
                </value>
                <value>
                    <fullName>UK2</fullName>
                </value>
                <value>
                    <fullName>UK3</fullName>
                </value>
                <value>
                    <fullName>UK4</fullName>
                </value>
                <value>
                    <fullName>RA1</fullName>
                </value>
                <value>
                    <fullName>RA2</fullName>
                </value>
                <value>
                    <fullName>RA3</fullName>
                </value>
                <value>
                    <fullName>RA4</fullName>
                </value>
                <value>
                    <fullName>Delhi</fullName>
                </value>
                <value>
                    <fullName>Maharashtra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Location_Pincode__c</fullName>
        <description>Worker&apos;s working location pincode.</description>
        <label>Work Location Pincode</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Location__c</fullName>
        <label>Work Location</label>
        <referenceTo>B_Location__c</referenceTo>
        <relationshipLabel>Staff</relationshipLabel>
        <relationshipName>B_Staffs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>B_Staff</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BSID-{00000}</displayFormat>
        <label>Staff ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B_Staffs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Number_is_valid</fullName>
        <active>true</active>
        <description>Phone number validator.</description>
        <errorConditionFormula>IF(Len(Phone__c) != 10, true,
IF(NOT(ISNUMBER(Phone__c)), true,
IF(ISBLANK(Phone__c), true, false)))</errorConditionFormula>
        <errorDisplayField>Phone__c</errorDisplayField>
        <errorMessage>Enter a valid phone number:
1. must contain 10 digits.</errorMessage>
    </validationRules>
</CustomObject>